# instr-core

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh-CN.md  pyproject.toml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  i18n.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: CommandDetail.tsx  ConnectedPanel.tsx  SafetyLimitsPanel.tsx  SchemaBrowser.tsx  SchemaCommandTree.tsx  SchemaListPanel.tsx  ScpiTerminal.tsx  VisaResourcePanel.tsx
docs/: Architecture_AUTO_INSTRUMENT_DETECTION.md  Architecture_IVSWEEP.md  Architecture_SECURITY_FIX_001.md  Architecture_SWEEP_TEST_ROUTER_SPLIT.md  DESKTOP.md  PRD_AUTO_INSTRUMENT_DETECTION.md  PRD_IVSWEEP.md  PRD_SECURITY_FIX_001.md  PRD_SWEEP_TEST_ROUTER_SPLIT.md
docs/agent/: dual-keithley-sweep.md
docs/superpowers/plans/: 2026-06-17-ai-iv-sweep-agent.md  (+3 more)
scripts/: start-desktop.py
src/instr_core/: __init__.py  api_server.py  idn_parser.py  main.py  registry_client.py  run_lifecycle.py  schema.py  server.py  validator.py
tests/: test_agent_api.py  test_agent_context.py  test_agent_multi_api.py  test_agent_parser.py  test_agent_store.py  test_api_server.py  test_cli.py  test_idn_parser.py  test_integration.py  test_ownership_service.py  test_registry_client.py  test_run_lifecycle.py  test_safety_service.py  test_schema.py  test_session_manager.py  test_sweep_engine.py  test_visa_service.py
(+40 files in other folders)
